# WASM-Instagram-Unfollower-Tracker

./: .gitignore  Cargo.toml  README.md  cargo.toml  manifest.json
.github/workflows/: build-release.yml
extension/: content_script.js  popup.html  popup.js  unfollower_logic_bg.wasm
extension/wasm/: unfollower_logic.js
src/: lib.rs
